--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
 	flex-flow: row wrap;
 	align-items: center;
 	justify-content: space-around;
-	height: 600px;
+	height: 100vh;
 	align-content: space-around;
 	font-family: 'Roboto', sans-serif;
 	background-color: #cccccc;
@@ -13,13 +13,15 @@ article {
 	height: 300px;
 }
 footer {
-	margin: 0 auto;
-	height: 100px;
+	margin-top: 200px;
+	  background-color: #595959;
+	  width: 100vw;
+	  text-align: center;
 }
+
 footer img {
-	height: 100%;
-	width: auto;
-	margin: 20px;
+	  width: 90px;
+	  margin: 20px;
 }
 article img {
 	height: 100%;
@@ -40,11 +42,11 @@ article img {
 	}
 	footer {
 		margin: 0 auto;
-		height: 30px;
+		height: 40px;
 	}
 	footer img{
 		width: auto;
-		height: 100%;
+		height: 85%;
 		margin: 5px;
 	}
 }
