--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,30 @@
+html {
+	height: 100%;
+}
 body {
+	min-height: 100%;
 	display: flex;
-	flex-flow: row wrap;
+	flex-flow: column wrap;
 	align-items: center;
 	justify-content: space-around;
 	align-content: space-around;
 	font-family: 'Roboto', sans-serif;
 	background-color: #cccccc;
 }
+.cima {
+	width: 100%;
+	display: flex;
+	flex: 1 0 auto;
+	flex-flow: row wrap;
+	align-items: center;
+	justify-content: space-around;
+	align-content: space-around;
+}
 article {
 	width: 300px;
 	height: 300px;
 }
 footer {
-	margin-top: 209px;
 	  background-color: #595959;
 	  width: 100vw;
 	  text-align: center;
